# SpikeC

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  rate_cv.c  suscept_mpi.c  suscept_mpi_new.c  suscept_test.c  test.c
data/: job_script.sh  slurm-1548704.out  slurm-1548705.out  slurm-1548706.out  suscepts_N_1e4.csv  suscepts_N_1e7_mpi.csv  suscepts_N_1e7_mpi_alt.csv
data/novikov_check/: job_script.sh  lif_c_1e-1.csv  lif_c_1e-1.ini  lif_c_1e-2.csv  lif_c_1e-2.ini  lif_c_1e0.csv  lif_c_1e0.ini  lif_c_5e-1.csv  lif_c_5e-1.ini  lif_c_9e-1.csv  lif_c_9e-1.ini
data/testfiles/: lif.ini  pif.ini  timeframe.ini
docs/: README.md  _navbar.md  _sidebar.md  index.html
docs/doxygen/: Doxyfile
docs/doxygen/html/: annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  index.html  signals_8h_source.html  statistics_8h_source.html  structTimeFrame-members.html  structTimeFrame.html  timeframe_8h_source.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  classes_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
docs/doxygen/latex/: annotated.tex  refman.tex  structTimeFrame.tex
docs/guide/: readme.md
docs/reference/: api.md
include/: spike.h
src/: CMakeLists.txt  analytics.c  analytics.h  neurons.c  neurons.h  signals.c  signals.h  spike.h  spiketrain.c  spiketrain.h  statistics.c  statistics.h  timeframe.c  timeframe.h
src/neurons/: if_neurons.c  if_neurons.h  ifac_neurons.c  ifac_neurons.h
src/simulations/: suscept_sim.c  suscept_sim.h
src/utils/: array_utils.c  array_utils.h  fft.c  fft.h  info.h  io_utils.c  io_utils.h  log.c
test/: CMakeLists.txt  test_analytics.h  test_main.c  test_neurons.c  test_neurons.h  test_signals.cpp  test_signals.h  test_spike.c  test_timeframe.c  test_timeframe.cpp  test_timeframe.h  unittest.h
